[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-git-versioning",
    "cython",
    "numpy>=2.0.0rc1",
]
build-backend = "setuptools.build_meta"

[project]
name = "caput"
description = "Cluster Astronomical Python Utilities"
license = { file = "LICENSE" }
authors = [
    { name = "The CHIME Collaboration", email = "lgray@phas.ubc.ca" }
]
maintainers = [
    { name = "Liam Gray", email = "lgray@phas.ubc.ca" },
    { name = "Don Wiebe", email = "dvw@phas.ubc.ca" }
]
dynamic = ["readme", "version"]
requires-python = ">=3.10"
dependencies = [
    "cachetools",
    "click",
    "cython",
    "h5py",
    "numpy>=1.24",
    "psutil",
    "PyYAML",
    "scipy>=1.13",
    "skyfield>=1.31",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
mpi = ["mpi4py>=1.3"]
compression = ["bitshuffle", "zarr>=2.11.0,<3", "numcodecs>=0.7.3,<0.16"]
profiling = ["pyinstrument"]
docs = ["Sphinx>=5.0", "sphinx_rtd_theme", "funcsigs", "mock"]
lint = ["ruff", "black"]
test = ["pytest", "pytest-lazy-fixtures"]
fftw = ["pyfftw>=0.13.1"]

[project.urls]
Documentation = "https://caput.readthedocs.io/"
Repository = "https://github.com/radiocosmology/caput"

[project.scripts]
caput-pipeline = "caput.scripts.runner:cli"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages]
find = {}

[tool.ruff]
# Enable:
# pycodestyle ('E')
# pydocstyle ('D')
# pyflakes ('F')
# isort ('I')
# pyupgrade ('UP')
# numpy-specific ('NPY')
# ruff-specific ('RUF')
# flake8-blind-except ('BLE')
# flake8-comprehensions ('C4')
# flake8-return ('RET')
lint.select = ["E", "D", "F", "I", "UP", "NPY", "RUF", "BLE", "C4", "RET"]
lint.ignore = [
    "E501", # E501: line length violations. Enforce these with `black`
    "E741", # E741: Ambiguous variable name
    "D105", # D105: Missing docstring in magic method
    "D107", # D107: Missing docstring in init
    "D203", # D203: 1 blank line required before class docstring
    "D213", # D213: Multi-line docstring summary should start at the second line
    "D400", # D400: First line should end with a period (only ignoring this because there's another error that catches the same thing)
    "D401", # D401: First line should be in imperative mood
    "D402", # D402: First line should not be the function’s “signature”
    "D413", # D413: Missing blank line after last section
    "D416", # D416: Section name should end with a colon
    "NPY002", # NPY002: replace legacy numpy.random calls with np.random.Generator
]
exclude = [
    ".git",
    ".github",
    "build",
    "doc",
    "tests",
]
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["I", "F401"]
