[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-git-versioning",
    "cython",
    "numpy>=2.0.0rc1",
]
build-backend = "setuptools.build_meta"

[project]
name = "caput"
description = "Cluster Astronomical Python Utilities"
license = { file = "LICENSE" }
authors = [
    { name = "The CHIME Collaboration", email = "lgray@phas.ubc.ca" }
]
maintainers = [
    { name = "Liam Gray", email = "lgray@phas.ubc.ca" },
    { name = "Don Wiebe", email = "dvw@phas.ubc.ca" }
]
dynamic = ["readme", "version"]
requires-python = ">=3.10"
dependencies = [
    "cachetools",
    "click",
    "cython",
    "h5py",
    "numpy>=1.24",
    "psutil",
    "PyYAML",
    "toml",
    "scipy>=1.13",
    "skyfield>=1.31",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
mpi = ["mpi4py>=1.3"]
compression = ["bitshuffle", "zarr>=2.11.0,<3", "numcodecs>=0.7.3,<0.16"]
profiling = ["pyinstrument"]
docs = ["Sphinx>=5.0", "sphinx_rtd_theme", "funcsigs", "mock"]
lint = ["ruff", "black"]
test = ["pytest", "pytest-lazy-fixtures"]
fftw = ["pyfftw>=0.13.1"]

[project.urls]
Documentation = "https://caput.readthedocs.io/"
Repository = "https://github.com/radiocosmology/caput"

[project.scripts]
caput-pipeline = "caput.pipeline.runner._cli:cli"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"caput.pipeline.runner._scheduler" = ["_default_systems.toml"]
