[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-git-versioning",
    "cython",
    "numpy>=2.0.0rc1",
]
build-backend = "setuptools.build_meta"

[project]
name = "caput"
description = "Cluster Astronomical Python Utilities"
license = { file = "LICENSE" }
authors = [
    { name = "The CHIME Collaboration", email = "lgray@phas.ubc.ca" }
]
maintainers = [
    { name = "Liam Gray", email = "lgray@phas.ubc.ca" },
    { name = "Don Wiebe", email = "dvw@phas.ubc.ca" }
]
dynamic = ["readme", "version"]
requires-python = ">=3.10"
dependencies = [
    "cachetools",
    "click",
    "cython",
    "h5py",
    "numpy>=1.24",
    "psutil",
    "PyYAML",
    "toml",
    "scipy>=1.13",
    "skyfield>=1.31",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
mpi = ["mpi4py>=1.3"]
compression = ["bitshuffle"]
zarr = ["zarr>=2.11.0,<3", "numcodecs>=0.7.3"]
fftw = ["pyfftw>=0.13.1"]
profiling = ["pyinstrument>5"]
# Install all optional extras
complete = ["caput[mpi,zarr,compression,fftw]"]
# Extras for tests and documentation
test = [
    "caput[complete]",
    "pre-commit",
    "pytest",
    "pytest-mpi",
    "pytest-lazy-fixtures",
]
docs = [
    "caput[complete]",
    "gitpython",
    "Sphinx>=5.0,<9",
    "pydata_sphinx_theme",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "numpydoc",
]
dev = ["caput[test]", "caput[docs]", "caput[profiling]", "ruff"]

[project.urls]
Documentation = "https://caput.readthedocs.io/"
Repository = "https://github.com/radiocosmology/caput"

[project.scripts]
caput-pipeline = "caput.pipeline.runner._cli:cli"

# setuptools configuration
[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
caput = ["py.typed", "*.pyi"]
"caput.pipeline.runner._scheduler" = ["_default_systems.toml"]

# pytest configuration
[tool.pytest.ini_options]
# Required to use pyproject.toml for pytest configuration
minversion = "6.0"
# Uses recommended importlib mode for test discovery, which
# is not the default for compatibility reasons
addopts = [
    "--import-mode=importlib",
    "--verbose",
    "--strict-markers",
    ]
# This isn't really necessary, but it makes it explicit
# that pytest should only look in these directories for tests
# `caput` is included to allow doctest discovery in the main package
testpaths = ["tests", "caput"]
